--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-query-devtools": "^4.36.1",
     "axios": "^1.7.9",
     "preact": "^10.25.4",
+    "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.2.0"
   },
   "devDependencies": {
